@@ -13,7 +13,6 @@ HIGH
 MEDIUM
 - factor out duplication in ChallengeFactory hierarchy when the dust settles
 - factor out duplication in GTL_ChallengeNode and MTE_ChallengeNode
-- factor out duplication in GTL_GraphNode and MTE_GraphNode
 
 LOW
 - remove code related to SlopeEquationNode.PUT_UNSIMPLIFIED_SLOPE_ON_SEPARATE_LINE
